--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="index">
 
     {% include header.html %}
-    {% include docs_header.html %}
+    <!-- {% include docs_header.html %} -->
     {% if page.title %}
       {% include banner.html %}
     {% endif %}
