--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 	
 	<meta name="keywords" content="{{ page.title | append: ', ' | append: site.name | append: ', ' | append: site.meta_description}}">
 	<meta name="description" content="{{site.meta_description}}">
-
+	<script src="/styles/js/three.js"></script>
 	<script src="{{ '/styles/js/jquery.min.js' | prepend: site.baseurl }}"></script>
 	<!--[if lt IE 9]>
     	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,12 +26,120 @@
 		  var hm = document.createElement("script");
 		  hm.src = "//hm.baidu.com/hm.js?{{ site.baidu_analysis }}";
 		  var s = document.getElementsByTagName("script")[0]; 
-		  s.parentNode.insertBefore(hm, s);
+			s.parentNode.insertBefore(hm, s);
+
 		})();
+        $(document).ready(function(){
+//            initThree()
+            initPointer()
+		})
+		//  threejs动画
+		function initThree() {
+
+		    const domThree = document.getElementById("threeObj")
+			const scene = new THREE.Scene()
+
+			const camera = new THREE.PerspectiveCamera(60,window.innerWidth / window.innerHeight,1,1000)
+			camera.position.x = 0
+            camera.position.y = 0
+            camera.position.z = 120
+
+			const render = new THREE.WebGLRenderer()
+			render.setSize(domThree.clientWidth,domThree.clientHeight)
+            render.setClearColor(0x1d365d,1.0)
+            domThree.appendChild(render.domElement)
+
+			const geo = new THREE.BoxGeometry( 50, 50, 50 );
+			const material = new THREE.MeshLambertMaterial({
+			    color:0x74d1d8
+			})
+			const cube = new THREE.Mesh(geo,material)
+            cube.position.set(0,0,0)
+
+			scene.add(cube)
+
+			const light = new THREE.AmbientLight(0xffffff)
+			scene.add(light)
+
+			function animation() {
+				requestAnimationFrame(animation)
+
+                cube.rotateX(0.01)
+				cube.rotateY(0.01)
+                render.render(scene,camera)
+            }
+
+            animation()
+		}
+		function initPointer(){
+			const pointer = document.getElementsByClassName("pointer")[0]
+
+            document.addEventListener("mousemove",function (event) {
+                pointer.style.top = (event.y + 10) + "px"
+                pointer.style.left = (event.x + 10) + "px"
+                pointer.style.visibility = "visible"
+            })
+
+		}
+	
 	</script>
   	<style type="text/css">
 	  	.docs-content{
 	  		margin-bottom: 10px;
 	  	}
+		#threeObj{
+			display: inline-block;
+			width: 60px;
+			height: 60px;
+		}
+		/*.navbar-img{*/
+			/*animation: round  5s linear infinite alternate;*/
+		/*}*/
+		@keyframes round {
+			from {
+				transform: rotateY(0deg);
+			}
+			to {
+				transform: rotateY(360deg);
+			}
+		}
+		.pointer{
+			visibility: hidden;
+			position: fixed;
+			z-index: 999;
+			width: 25px;
+			height: 25px;
+			animation: round  5s linear infinite alternate;
+		}
+		.cricle1{
+			width: 15px;
+			height: 15px;
+			background-color: #e5694d;
+			border: none;
+			border-radius: 100%;
+			display: inline-block;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+		.cricle2{
+			width: 15px;
+			height: 15px;
+			background-color: #e5694d;
+			border: none;
+			border-radius: 100%;
+			position: absolute;
+			top: 0;
+			left: 9.5px;
+		}
+		.square{
+			width: 15px;
+			height: 15px;
+			background-color: #e5694d;
+			transform: rotateZ(45deg);
+			position: absolute;
+			top: 4px;
+			left: 4.5px;
+		}
   	</style>
 </head>
