--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,9 @@
         <span class="icon-bar"></span>
       </button>
       <a href="/" class="navbar-brand">
-        <img src="{{ '/styles/images/logo.png' | prepend: site.baseurl }}">
+        <img class="navbar-img" src="{{ '/styles/images/logo.png' | prepend: site.baseurl }}">
       </a>
+      <div  id="threeObj"></div>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">    
@@ -23,10 +24,10 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
+        <!-- <li>
             <a><span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span></a>
-        </li>
-        <li class="dropdown">
+        </li> -->
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
@@ -34,8 +35,13 @@
             <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">我的书单</a></li>
             <li class="divider"></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
     </nav>
   </div>
 </header>
+<div class='pointer'>
+  <div class="cricle1"></div>
+  <div class="cricle2"></div>
+  <div class="square"></div>
+</div>
